--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -6,7 +6,7 @@ name: cron
 # events but only for the master branch
 on:
   schedule:
-    - cron: "38 * * * *"
+    - cron: "41 * * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,6 +19,7 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
     - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
     # Runs a single command using the runners shell
