--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -23,8 +23,10 @@ jobs:
     - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
     # Runs a single command using the runners shell
-    - name: Run a one-line script
+    - name: Run list2md.multiprocess.py
       run: pipenv install && pipenv run python list2md.multiprocess.py --token ${{ secrets.token }}
+    - name: Add & Commit
+      uses: EndBug/add-and-commit@v4.0.0
     - name: GitHub Push
       uses: ad-m/github-push-action@v0.5.0
       with:
