--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -27,6 +27,9 @@ jobs:
       run: pipenv install && pipenv run python list2md.multiprocess.py --token ${{ secrets.token }}
     - name: Add & Commit
       uses: EndBug/add-and-commit@v4.0.0
+      with:
+        author_name: GitHub Action
+        author_email: kkweon@gmail.com
     - name: GitHub Push
       uses: ad-m/github-push-action@v0.5.0
       with:
