--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,8 @@ target/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -129,3 +130,5 @@ $RECYCLE.BIN/
 # KDE directory preferences
 .directory
 .mypy_cache/
+.venv/
+.vscode/
