--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,39 +1,28 @@
-# This is a basic workflow to help you get started with Actions
-
 name: cron
 
-# Controls when the action will run. Triggers the workflow on push or pull request 
-# events but only for the master branch
 on:
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
     inputs:
       reason:
-        description: 'Reason for running manually'
+        description: "Reason for running manually"
         required: true
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
-    - name: Install pipenv
-      run: pip install -U pipenv
-    # Runs a single command using the runners shell
-    - name: Run list2md.multiprocess.py
-      run: pipenv install && pipenv run python list2md.multiprocess.py --token ${{ secrets.GITHUB_TOKEN }}
-    - name: Add & Commit
-      run: |
-        git config --global user.name 'GitHub Action'
-        git config --global user.email 'kkweon@gmail.com'
-        git commit -am "GitHub Cron Workflow Commit"
-        git push
-
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+      - run: pip install -U pipenv
+      - run: pipenv install --skip-lock
+      - run: pipenv run python list2md.multiprocess.py --token ${{ secrets.GITHUB_TOKEN }}
+      - name: Add & Commit
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'kkweon@gmail.com'
+          git commit -am "GitHub Cron Workflow Commit"
+          git push
